[package]
name = "time-locked-wallet"
version = "0.1.0"
description = "Time-locked wallet on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "time_locked_wallet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

